--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "console.table": "^0.10.0",
+    "dotenv": "^9.0.1",
     "inquirer": "^8.0.0",
     "mysql": "^2.18.1"
   },
